<!--
-
- TOP Development
- strings.xml
-
-->

<resources>
    
    <string name="app_name">GreenBeans</string>

    <string name="title_virtual_store">Virtual Store</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_orders">Orders</string>
    <string name="title_products">Products</string>
    <string name="title_users">Users</string>
    <string name="title_kart">Kart</string>
    <string name="title_order_history">Order History</string>
    <string name="title_settings">Settings</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_order_summary">Order Summary</string>
    
    <string name="tv_stay_signed_in">Stay Signed In?</string>
    <string name="tv_deals_of_the_day">Deals of the Day</string>
    <string name="tv_store_categories">Categories</string>
    <string name="tv_empty_kart">Your Kart is Empty</string>
    <string name="tv_delivery_or_pickup">Delivery or Pick-Up?</string>
    <string name="tv_update_state">Update Status</string>
    <string name="tv_are_you_sure">Are You Sure?</string>
    <string name="tv_add_new_product">Add New Product</string>
    <string name="tv_select_product_type">Select Product Type</string>
    <string name="tv_create_account">Create Account</string>
    <string name="tv_michigan">, Michigan</string>
    <string name="tv_kart">Kart</string>
    <string name="tv_guest_login">Guest Login</string>
    <string name="tv_add_user">Add User</string>
    <string name="tv_edit_user">Edit User</string>
    <string name="tv_order_history">Order History</string>
    <string name="tv_order_details">Order Details</string>
    <string name="tv_admin_order_details">Admin Order Details</string>
    <string name="tv_order_total">Order Total:</string>
    <string name="tv_subtotal">Subtotal:</string>
    <string name="tv_tax">Tax:</string>
    <string name="tv_delivery_fee">Delivery Fee:</string>

    <string name="menu_title_menu">Menu</string>
    <string name="menu_title_back">Return</string>

    <string name="dialog_title_loading">Loading...</string>
    <string name="dialog_title_update_address">Update Address?</string>
    <string name="dialog_title_highlight_product">Do you want to highlight this product?</string>
    <string name="dialog_title_unhighlight_product">Do you want to unhighlight this product?</string>
    <string name="dialog_title_highlight_discount">What is the Product Discount?</string>

    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_search">Search</string>
    <string name="et_text_one">1</string>
    <string name="et_hint_product_name">Product Name</string>
    <string name="et_hint_product_desc">Product Description</string>
    <string name="et_hint_product_price">Product Price</string>
    <string name="et_hint_confirm_email">Confirm Email</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="et_hint_fullname">Full Name</string>
    <string name="et_hint_address">Address</string>
    <string name="et_hint_city">City</string>
    <string name="et_hint_zipcode">Zipcode</string>
    <string name="et_hint_phone_number">Phone Number</string>
    <string name="et_hint_highlight_discount">Discount</string>

    <string name="b_login">Login</string>
    <string name="b_guest_login">Guest Login</string>
    <string name="b_sign_up">Sign Up</string>
    <string name="b_merchandise">Merchandise</string>
    <string name="b_edibles">Edibles</string>
    <string name="b_supplies">Supplies</string>
    <string name="b_cbd">CBD</string>
    <string name="b_all_products">All Products</string>
    <string name="b_all">All</string>
    <string name="b_flower">Flower</string>
    <string name="b_clothing">Clothing</string>
    <string name="b_concentrate">Concentrate</string>
    <string name="b_add">+</string>
    <string name="b_minus">-</string>
    <string name="b_add_to_kart">Add to Kart</string>
    <string name="b_product_details">Details</string>
    <string name="b_place_order">Place Order</string>
    <string name="b_delivery">Delivery</string>
    <string name="b_pick_up">Pick-Up</string>
    <string name="b_cancel">Cancel</string>
    <string name="b_update_status">Update Status</string>
    <string name="b_archive">Archive</string>
    <string name="b_completed">Completed</string>
    <string name="b_ready_for_pickup">Ready for Pickup</string>
    <string name="b_en_route">En Route</string>
    <string name="b_confirm">Confirm</string>
    <string name="b_add_product">Add</string>
    <string name="b_delete_product">Delete</string>
    <string name="b_edit_product">Edit</string>
    <string name="b_highlight">Highlight</string>
    <string name="b_product_type">Select Product Type</string>
    <string name="b_yes">Yes</string>
    <string name="b_no">No</string>
    <string name="b_create_account">Create Account</string>
    <string name="b_cancel_order">Cancel Order</string>
    <string name="b_find_address">Search Address</string>
    <string name="b_remove">X</string>
    <string name="b_select">Select</string>
    <string name="b_small_size">S</string>
    <string name="b_medium_size">M</string>
    <string name="b_large_size">L</string>

    <string name="api_key">AIzaSyA7vDdgj8ucFDomOEkeFwXp2iNuRJMYAUU</string>

    <string name="toast_message_something_went_wrong">Something went wrong</string>
    <string name="toast_message_no_email">Enter an email to continue</string>
    <string name="toast_message_no_password">Enter a password to continue</string>
    <string name="toast_message_login_successful">Login Successful!</string>
    <string name="toast_message_login_error">User Credentials are not valid!</string>
    <string name="toast_message_error_user_data">Error retrieving user data</string>
    <string name="toast_message_invalid_email">Invalid Email! Enter a valid email to continue</string>
    <string name="toast_message_no_selected_order">Select an Order to continue</string>
    <string name="toast_message_cannot_be_lower_than_zero">Cannot decrease quantity under one</string>
    <string name="toast_message_added_to_kart">Added to kart</string>
    <string name="toast_message_removed_from_kart">Removed from kart</string>
    <string name="toast_message_order_archived">Order Archived!</string>
    <string name="toast_message_failed_to_archive">Failed to Archive Order</string>
    <string name="toast_message_status_updated">Order Status Updated!</string>
    <string name="toast_message_failed_to_update_status">Failed to Update Status</string>
    <string name="toast_message_failed_to_retrieve_orders">Failed to Retrieve Orders</string>
    <string name="toast_message_enter_product_name">Enter Product Name to Continue</string>
    <string name="toast_message_enter_product_desc">Enter Product Description to Continue</string>
    <string name="toast_message_enter_product_price">Enter Product Price to Continue</string>
    <string name="toast_message_enter_valid_price">Enter Valid Product Price</string>
    <string name="toast_message_select_product_type">Select Product Type</string>
    <string name="toast_message_add_product_successful">Added Product Successfully</string>
    <string name="toast_message_add_product_error">Failed to Add Product</string>
    <string name="toast_message_product_deleted_successful">Product Deleted Successfully</string>
    <string name="toast_message_product_deleted_error">Failed to Delete Product</string>
    <string name="toast_message_no_product_selected">Select Product to Continue</string>
    <string name="toast_message_no_fullname">Enter a Fullname to continue</string>
    <string name="toast_message_no_address">Enter an Address to continue</string>
    <string name="toast_message_no_city">Enter a City to continue</string>
    <string name="toast_message_no_zipcode">Enter a Zipcode to continue</string>
    <string name="toast_message_email_mismatch">Email Mismatch</string>
    <string name="toast_message_password_mismatch">Password Mismatch</string>
    <string name="toast_message_failed_to_create_account">Failed to create account</string>
    <string name="toast_message_no_selected_user">Select a User to continue</string>
    <string name="toast_message_account_deleted_success">Account Deleted Successfully</string>
    <string name="toast_message_account_deleted_error">Account Deletion Failed</string>
    <string name="toast_message_account_created_success">Account Creation Success</string>
    <string name="toast_message_account_created_error">Account Creation Failed</string>
    <string name="toast_message_account_edit_success">Account Updated Successfully</string>
    <string name="toast_message_account_edit_failed">Account Update Failed</string>
    <string name="toast_message_no_phone_number">Enter a phone number to continue</string>
    <string name="toast_message_invalid_phone_number">Enter a nine-digit phone number to continue</string>
    <string name="toast_message_no_discount">Enter a Discount to Continue</string>
    <string name="toast_message_product_highlighted_success">Product Highlighted Successfully!</string>
    <string name="toast_message_product_highlighted_error">Producted Highlighted Failed!</string>
    <string name="toast_message_product_edit_success">Product Successfully Updated!</string>
    <string name="toast_message_product_edit_error">Product Update Failed!</string>
    <string name="toast_message_empty_kart">Kart is Empty</string>
    <string name="toast_message_no_address_selected">Select an Address to continue</string>
    
</resources>
