<?xml version="1.0" encoding="utf-8"?>

<!--
-
- TOP Development
- fragment_add_product_layout.xml
-
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/black_background_green_outline">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansDialogTitle"
        android:text="@string/tv_add_new_product"
        android:id="@+id/tv_title"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansEditText"
        android:hint="@string/et_hint_product_name"
        android:id="@+id/edittext_product_name"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/product_description_edittext_height"
        app:layout_constraintTop_toBottomOf="@id/edittext_product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansEditText"
        android:hint="@string/et_hint_product_desc"
        android:id="@+id/edittext_product_desc"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edittext_product_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansButton"
        android:text="@string/b_product_type"
        android:id="@+id/button_product_type"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_product_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_center"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansEditText"
        android:hint="@string/et_hint_product_price"
        android:id="@+id/edittext_product_price"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansButton"
        android:text="@string/b_add_product"
        android:id="@+id/button_add"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        android:id="@+id/guideline_center"/>

</androidx.constraintlayout.widget.ConstraintLayout>