<?xml version="1.0" encoding="utf-8"?>

<!--
-
- TOP Development
- dialog_confirm_layout.xml
-
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/GreenBeansDialogTitle"
        android:text="@string/tv_are_you_sure"
        android:id="@+id/tv_title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansButton"
        android:text="@string/b_confirm"
        android:id="@+id/button_confirm"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_confirm"
        android:layout_margin="@dimen/default_margin"
        style="@style/GreenBeansButton"
        android:text="@string/b_cancel"
        android:id="@+id/button_cancel"/>

</RelativeLayout>