<?xml version="1.0" encoding="utf-8"?>

<!--
-
- TOP Development
- dialog_order_type_layout.xml
-
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/GreenBeansDialogTitle"
        android:text="@string/tv_delivery_or_pickup"
        android:id="@+id/tv_title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        style="@style/GreenBeansButton"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/b_delivery"
        android:id="@+id/button_delivery"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_delivery"
        style="@style/GreenBeansButton"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/b_pick_up"
        android:id="@+id/button_pick_up" />

</RelativeLayout>